--- a/config/Hyprland/hyprland.conf
+++ b/config/Hyprland/hyprland.conf
@@ -35,9 +35,9 @@ monitor=,preferred,auto,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = cosmic-files
+$fileManager = nautilus
 $menu = "$HOME/.config/rofi/launchers/type-5/launcher.sh"
-$capture = "/home/danielg/Scripts/screenscript.sh"
+$capture = "/home/danielg/Scripts/screenscr.sh"
 
 #################
 ### AUTOSTART ###
@@ -113,7 +113,7 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 5
-    rounding_power = 2
+    #rounding_power = 2
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
