--- a/config/Hyprland/hyprland.conf
+++ b/config/Hyprland/hyprland.conf
@@ -37,7 +37,7 @@ monitor=,preferred,auto,1
 $terminal = kitty
 $fileManager = nautilus
 $menu = "$HOME/.config/rofi/launchers/type-5/launcher.sh"
-$capture = "/home/danielg/Scripts/screenscr.sh"
+$capture = "$HOME/Scripts/screenscr.sh"
 
 #################
 ### AUTOSTART ###
