--- a/config/Hyprland/hyprland.conf
+++ b/config/Hyprland/hyprland.conf
@@ -36,7 +36,9 @@ monitor=,preferred,auto,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = "$HOME/.config/rofi/launchers/type-5/launcher.sh"
+
+#$menu = "$HOME/.config/rofi/launchers/type-5/launcher.sh"
+$menu = "rofi -show drun"
 $capture = "$HOME/Scripts/screenscr.sh"
 
 #################
