--- a/config/Hyprland/hyprland.conf
+++ b/config/Hyprland/hyprland.conf
@@ -38,7 +38,7 @@ $terminal = kitty
 $fileManager = nautilus
 
 #$menu = "$HOME/.config/rofi/launchers/type-5/launcher.sh"
-$menu = "rofi -show drun"
+$menu = rofi -show drun
 $capture = "$HOME/Scripts/screenscr.sh"
 
 #################
